--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,6 @@
+<!-- badges: start -->
+  [![Travis build status](https://travis-ci.org/ArunabhaCodes/MPGE.svg?branch=master)](https://travis-ci.org/ArunabhaCodes/MPGE)
+<!-- badges: end -->
 ---
 output: github_document
 ---
